tests/rosetta/out/C/continued-fraction.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:37Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:37Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
map_string_int newTerm(int a, int b) {
  map_string_int tmp1 = map_string_int_create(2);
  map_string_int_put(&tmp1, "a", a);
  map_string_int_put(&tmp1, "b", b);
  return tmp1;
}

int cfSqrt2(int nTerms) {
  int n = 0;
  while (n < nTerms) {
    f = 0;
    n = n + 1;
  }
  if (nTerms > 0) {
    f.data[0].data["a"] = 1;
  }
  return f;
}

int cfNap(int nTerms) {
  int n = 0;
  while (n < nTerms) {
    f = 0;
    n = n + 1;
  }
  if (nTerms > 0) {
    f.data[0].data["a"] = 2;
  }
  if (nTerms > 1) {
    f.data[1].data["b"] = 1;
  }
  return f;
}

int cfPi(int nTerms) {
  int n = 0;
  while (n < nTerms) {
    int g = 2 * n - 1;
    f = 0;
    n = n + 1;
  }
  if (nTerms > 0) {
    f.data[0].data["a"] = 3;
  }
  return f;
}

double real(int f) {
  double r = 0.0;
  int i = f.len - 1;
  while (i > 0) {
    r = ((double)(f.data[i].data["b"])) / (((double)(f.data[i].data["a"])) + r);
    i = i - 1;
  }
  if (f.len > 0) {
    r = r + ((double)(f.data[0].data["a"]));
  }
  return r;
}

int mochi_main() {
  char *tmp2 = _str(real(cfSqrt2(20)));
  char *tmp3 = concat_string("sqrt2: ", tmp2);
  printf("%s\n", tmp3);
  char *tmp4 = _str(real(cfNap(20)));
  char *tmp5 = concat_string("nap:   ", tmp4);
  printf("%s\n", tmp5);
  char *tmp6 = _str(real(cfPi(20)));
  char *tmp7 = concat_string("pi:    ", tmp6);
  printf("%s\n", tmp7);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
